# serpent

./: MANIFEST.in  README.md  pyproject.toml
docs/source/: conf.py  projects.md  templates.md
serpent_cli/: __init__.py  templates.lst
serpent_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
templatespack/flask/: pyproject.toml
templatespack/flask/stempl_flask/: __init__.py
templatespack/webpy/: pyproject.toml
templatespack/webpy/stempl_webpy/: __init__.py
tests/flasktest/: app.py  pyproject.toml  serpent.conf
tests/flasktest/templates/: index.html
tests/globaltest/: main.py  pyproject.toml  serpent.conf
tests/myconsoleapp/: main.py  pyproject.toml  serpent.conf
tests/mycoolpkg/: pyproject.toml  serpent.conf
tests/mycoolpkg/mycoolpkg/: __init__.py
tests/mycoolpkg/tests/: test1.py
tests/mytemplate/: pyproject.toml  serpent.conf
tests/mytemplate/mytemplate/: __init__.py
tests/templtest/: pyproject.toml  serpent.conf  test.py
