[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "serpent-cli"
authors = [{name = "Carl Furtado", email = "carlzfurtado@gmail.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = ["virtualenv", "flit", "tomli", "tomli_w"]
version = "0.0.2"
description = "A CLI-based Python project template tool"
readme = "README.md"

[project.urls]
Home = "https://github.com/User0332/serpent"

[project.scripts]
serpent = "serpent_cli:main"

[tool.setuptools]
packages = ["serpent_cli"]
