[build-system]
requires = [
    "flit_core >=3.2,<4",
]
build-backend = "flit_core.buildapi"

[project]
name = "globaltest"
authors = [
    { name = "Carl Furtado", email = "carlzfurtado@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
]
dependencies = []
description = ""
version = "1.0.0"

[project.license]
file = "LICENSE"

[project.urls]
Home = "https://github.com/User0332/globaltest"
