[build-system]
requires = [
    "flit_core >=3.2,<4",
]
build-backend = "flit_core.buildapi"

[project]
name = "myconsoleapp"
authors = [
    { name = "Carl Furtado", email = "carlzfurtado@gmail.com" },
]
dependencies = []
version = "1.0.0"

[project.urls]
Home = "https://github.com/User0332/myconsoleapp"
